[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/robot.gd" type="Script" id=2]
[ext_resource path="res://scenes/omnidroid_mesh.tscn" type="PackedScene" id=3]

[node name="Robot" type="Spatial"]
script = ExtResource( 2 )

[node name="mesh" parent="." instance=ExtResource( 3 )]

[node name="Player0" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2 )

[node name="Player1" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 2 )

[node name="Player3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0 )

[node name="RollingTimer" type="Timer" parent="."]

[connection signal="move" from="Player0" to="mesh" method="_on_Player0_move"]
[connection signal="try_rolling" from="Player0" to="." method="_on_Player0_rolling"]
[connection signal="move" from="Player1" to="mesh" method="_on_Player1_move"]
[connection signal="try_rolling" from="Player1" to="." method="_on_Player1_rolling"]
[connection signal="move" from="Player2" to="mesh" method="_on_Player2_move"]
[connection signal="try_rolling" from="Player2" to="." method="_on_Player2_rolling"]
[connection signal="move" from="Player3" to="mesh" method="_on_Player3_move"]
[connection signal="try_rolling" from="Player3" to="." method="_on_Player3_rolling"]
[connection signal="timeout" from="RollingTimer" to="." method="_on_RollingTimer"]
